tests/NormalTests/paczka1/fuzzy1/71147839.err
Error in line 4: eQAtVDMWr S132 77,9
Error in line 8: tTdOymHLSl S602 23,5
Error in line 22: UQJllndqlHN S132 81,5
Error in line 28: YVu6xaIMGs S132 17,4
